[tool.poetry]
name = "nba-api-project"
version = "0.1.0"
description = ""
authors = ["Vikram Dimba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
requests = "^2.32.3"
nba-api = "^1.6.0"
pandas = "^2.2.3"
gunicorn = "^23.0.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
